--- a/mgr/praca/odbiornik.tex
+++ b/mgr/praca/odbiornik.tex
@@ -50,7 +50,12 @@ pomiarze 40 próbek na jeden okres daje rozdzielczość pomiaru odległości mni
 Błąd pomiaru trudno jednak oszacować, ponieważ  zależy on od aktualnej prędkości
 dźwięku, a ta zmienia się w czasie wraz ze zmianą warunków atmosferycznych.
 
-\rysunek{trojkat}{Szkic ramy odbiornika}{\label{fig:trojkat}}
+ \begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth, trim= 0mm 20mm 0mm 0mm,clip]{trojkat}
+    \caption{Szkic ramy odbiornika}
+    \label{fig:trojkat}
+\end{figure}
 
 
 \section{Budowa modułu ultradźwiękowego}
