--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -2,100 +2,111 @@
 
 \addcontentsline{toc}{chapter}{Bibliografia}
 
-  \bibitem{bib:soundSpeed}  Dean E. A., \textit{Atmospheric Effects on the Speed of Sound}, 
-  BATTELLE COLUMBUS LABS DURHAM NC, sierpień 1979
-  \myurl{http://www.dtic.mil/cgi-bin/GetTRDoc?Location=U2&doc=GetTRDoc.pdf&AD=ADA076060}
-
-  \bibitem{bib:stm32_usb_101} Peczarski M., 
-  \textit{USB dla niewtajemniczonych w przykładach na mikrokontrolery STM32}, Wydawnictwo BTC, Legionowo 2013
-  \myurl{http://www.mimuw.edu.pl/~marpe/book/stm32_usb_101.zip}
-
-  \bibitem{bib:FFT_correlation} Weisstein E. W., 
-  \textit{Cross-Correlation Theorem.} From MathWorld--A Wolfram Web Resource 
-  \myurl{http://mathworld.wolfram.com/Cross-CorrelationTheorem.html}
-
-  \bibitem{bib:arduinoNano}  
-  \textit{Arduino Nano (v2.3) User Manual}
-  \myurl{https://www.arduino.cc/en/uploads/Main/ArduinoNanoManual23.pdf}
-  
-  \bibitem{bib:40ST12}
-  \textit{ULTRASONIC SENSOR (GENERAL), 40ST-12}
-  \myurl{https://www.maritex.com.pl/media/uploads/PRODUKTY_PDF/sens/40str-12.pdf}
-
-  \bibitem{bib:stm32f4Discovery} UM1472 User manual, \textit{Discovery kit for STM32F407/417 lines}
-  \myurl{http://www.st.com/stm32}
-
-  \bibitem{bib:stm32f407} RM0090 Reference manual,
-\textit{STM32F405/415, STM32F407/417, STM32F427/437 and
-STM32F429/439 advanced ARM®-based 32-bit MCUs}
-  \myurl{http://www.st.com/stm32}
-  
-  \bibitem{bib:wzm_ladunkowy} Karki J., \textit{Signal Conditioning Piezoelectric Sensors}, 
-  Application Report: SLOA033A, wrzesień 2000
-  \myurl{http://www.ti.com/lit/an/sloa033a/sloa033a.pdf}
-
-  \bibitem{bib:ne5532}  Texas Instruments, \textit{Dual low-noise operational amplifiers}. SLOS075I, listopad 1979 - kwiecień 2009
-  \myurl{http://www.ti.com/lit/ds/symlink/ne5532.pdf}
-
-  \bibitem{bib:TLV2774}  Texas Instruments, \textit{TLV277x, TLV277xA - Family of 2.7-V high-slew-rate rail-to-rail output operation amplifiers with shutdown.}
-  SLOS209G, styczeń 1998 - luty 2004
-  \myurl{http://www.ti.com/lit/ds/symlink/tlv2774.pdf}
-  
-  \bibitem{bib:LM78M05CDT} Texas Instruments, \textit{LM341/LM78MXX Series 3-Terminal Positive Voltage Regulators}
-  SNVS090E, maj 2004 - sierpień 2005
-  \myurl{http://www.ti.com/lit/ds/symlink/lm341.pdf}
-  
-
-  \bibitem{bib:atmega328} Atmel, \textit{ATmega48A/PA/88A/PA/168A/PA/328/P - 
-  ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH}, 2014
-  \myurl{http://www.atmel.com/images/Atmel-8271-8-bit-AVR-Microcontroller-ATmega48A-48PA-88A-88PA-168A-168PA-328-328P_datasheet_Complete.pdf}
-
-  \bibitem{bib:Arduino} 
-  Arduino Software
-  \myurl{https://www.arduino.cc/en/Main/Software}
-
-  \bibitem{bib:OculusRift} Desai P. R., Desai P. N., Ajmera K. D., Mehta K.,
-  \textit{A Review Paper on Oculus Rift-A Virtual Reality Headset}
-  \myurl{http://arxiv.org/pdf/1408.1173.pdf}
-
-  \bibitem{bib:OculusRiftDK2}
-  Oculus Rift Development Kit 2
-  \myurl{https://vrwiki.wikispaces.com/Oculus+Rift+Development+Kit+2}
-  
-  \bibitem{bib:castAR}
-  castAR
-  %http://technicalillusions.com/wp-content/uploads/2013/10/Press-Kit.pdf
-  \myurl{http://technicalillusions.com/}
-  
-  \bibitem{bib:MicrosoftKinect} Zeng W.,
-  \textit{Microsoft Kinect Sensor and Its Effect}, Multimedia at Work, grudzień 2012
-  \myurl{http://research.microsoft.com/en-us/um/people/zhang/Papers/Microsoft\%20Kinect\%20Sensor\%20and\%20Its\%20Effect\%20-\%20IEEE\%20MM\%202012.pdf}
-
-  \bibitem{bib:VisualSFM} Changchang W.,
-  \textit{VisualSFM : A Visual Structure from Motion System}
-  \myurl{http://ccwu.me/vsfm/}
-
   \bibitem{bib:mouse} Banker C., Cretella M., Dimaria J., Mitchell J., Tucker J., 
   \textit{Ultrasonic 3D Wireless Computer Mouse}, 
   Worcester Polytechnic Institute Electrical and Computer Engineering Department, kwiecień 2007 
   \myurl{https://www.wpi.edu/Pubs/E-project/Available/E-project-042607-125024/unrestricted/magicmouse_2007-04-26.pdf}
 
-  \bibitem{bib:pi3dscan}
-  The Pi 3D scanner project
-  \myurl{http://www.pi3dscan.com/}
+    \bibitem{bib:VisualSFM} Changchang W.,
+  \textit{VisualSFM: A Visual Structure from Motion System}
+  \myurl{http://ccwu.me/vsfm/}
 
-  \bibitem{bib:powerGlove}
-  Power Glove
-  \myurl{https://en.wikipedia.org/wiki/Power_Glove}
+    \bibitem{bib:soundSpeed}  Dean E.A., \textit{Atmospheric Effects on the Speed of Sound}, 
+  BATTELLE COLUMBUS LABS DURHAM NC, sierpień 1979
+  \myurl{http://www.dtic.mil/cgi-bin/GetTRDoc?Location=U2&doc=GetTRDoc.pdf&AD=ADA076060}
 
-  \bibitem{bib:powerGlove2}
-  \textit{Reach Out And Touch Your Data}, IBM, BYTE, lipiec 1990
-  \myurl{http://research.microsoft.com/en-us/um/people/bibuxton/buxtoncollection/a/pdf/BYTE\%20Glove\%20Comparision.pdf}
+  \bibitem{bib:OculusRift} Desai P.R., Desai P.N., Ajmera K.D., Mehta K.,
+  \textit{A Review Paper on Oculus Rift-A Virtual Reality Headset}
+  \myurl{http://arxiv.org/pdf/1408.1173.pdf}
 
-  \bibitem{bib:katyEulera}
-  Kąty Eulera
-  \myurl{https://pl.wikipedia.org/wiki/K\%C4\%85ty_Eulera}
+    \bibitem{bib:metro} Hua J., Shen Z., Zhong S., 
+  \textit{We Can Track You If You Take the Metro: Tracking Metro Riders Using Accelerometers on Smartphones}
+  \myurl{http://arxiv.org/pdf/1505.05958v1.pdf}
+
   
+  \bibitem{bib:wzm_ladunkowy} Karki J., \textit{Signal Conditioning Piezoelectric Sensors}, 
+  Application Report, SLOA033A, wrzesień 2000
+  \myurl{http://www.ti.com/lit/an/sloa033a/sloa033a.pdf}
+
+    \bibitem{bib:chomiki} Markham A., Trigoni N., Ellwood S.A., Macdonald D.W.,
+  \textit{Revealing the hidden lives of underground animals using magneto-inductive tracking}
+  \myurl{https://www.cs.ox.ac.uk/files/3202/sensys2010b.pdf}
+
+    \bibitem{bib:PIRsens} Narayana S., Prasad R.V., Rao V.S., Prabhakar  T.V., Kowshik S.S., Iyer M.S.,
+  \textit{PIR Sensors: Characterization and Novel Localization Technique}
+  \myurl{http://www.es.ewi.tudelft.nl/papers/2015-VP-PIR.pdf}
+
+    \bibitem{bib:stm32_usb_101} Peczarski M., 
+  \textit{USB dla niewtajemniczonych w przykładach na mikrokontrolery STM32}, Wydawnictwo BTC, Legionowo 2013
+  \myurl{http://www.mimuw.edu.pl/~marpe/book/stm32_usb_101.zip}
+
+
+    \bibitem{bib:lokWiFi} Sapiezynski P., Stopczynski A., Gatej R., Lehmann S.,
+  \textit{Tracking Human Mobility using WiFi signals} 
+  \myurl{http://arxiv.org/pdf/1505.06311v1}
+
+    \bibitem{bib:FFT_correlation} Weisstein E.W., 
+  \textit{Cross-Correlation Theorem.} From MathWorld -- A Wolfram Web Resource 
+  \myurl{http://mathworld.wolfram.com/Cross-CorrelationTheorem.html}
+
+  \bibitem{bib:MicrosoftKinect} Zeng W.,
+  \textit{Microsoft Kinect Sensor and Its Effect}, Multimedia at Work, grudzień 2012
+  \myurl{http://research.microsoft.com/en-us/um/people/zhang/Papers/Microsoft\%20Kinect\%20Sensor\%20and\%20Its\%20Effect\%20-\%20IEEE\%20MM\%202012.pdf}
+
+
+  
+    \bibitem{bib:atmega328} Atmel-8271I, \textit{ATmega48A/PA/88A/PA/168A/PA/328/P -- 
+  ATMEL 8-BIT MICROCONTROLLER WITH 4/8/16/32KBYTES IN-SYSTEM PROGRAMMABLE FLASH}, październik 2014
+  \\ \href{http://www.atmel.com/images/Atmel-8271-8-bit-AVR-Microcontroller-ATmega48A-48PA-88A-88PA-168A-168PA-328-328P_datasheet_Complete.pdf}{\Code{http://www.atmel.com/images/Atmel-8271-8-bit-AVR-Microcontroller-ATmega48A-48PA-88A-88PA-168A-168PA-328-328P}\_datasheet\_Complete.pdf}
+  
+    \bibitem{bib:stm32f407} RM0090 Reference manual,
+\textit{STM32F405/415, STM32F407/417, STM32F427/437 and
+STM32F429/439 advanced ARM\textregistered-based 32-bit MCUs}
+  \myurl{http://www.st.com/stm32}
+  
+  \bibitem{bib:ne5532}  SLOS075I, \textit{Dual low-noise operational amplifiers},
+   listopad 1979 -- kwiecień 2009
+  \myurl{http://www.ti.com/lit/ds/symlink/ne5532.pdf}
+
+  \bibitem{bib:TLV2774}  SLOS209G, \textit{TLV277x, TLV277xA -- Family 
+  of 2.7-V high-slew-rate rail-to-rail output operation amplifiers with shutdown},
+   styczeń 1998 -- luty 2004
+  \myurl{http://www.ti.com/lit/ds/symlink/tlv2774.pdf}
+  
+  \bibitem{bib:LM78M05CDT} SNVS090E, \textit{LM341/LM78MXX Series 3-Terminal Positive Voltage Regulators},
+   maj 2004 -- sierpień 2005
+  \myurl{http://www.ti.com/lit/ds/symlink/lm341.pdf}
+  
+
+  \bibitem{bib:stm32f4Discovery} UM1472 User manual, \textit{Discovery kit for STM32F407/417 lines}
+  \myurl{http://www.st.com/stm32}
+
+
+  
+  
+  
+  \bibitem{bib:arduinoNano}  
+  \textit{Arduino Nano (v2.3) User Manual}
+  \myurl{https://www.arduino.cc/en/uploads/Main/ArduinoNanoManual23.pdf}
+
+  \bibitem{bib:Arduino} 
+  Arduino Software
+  \myurl{https://www.arduino.cc/en/Main/Software}
+
+  \bibitem{bib:castAR}
+  castAR
+  %http://technicalillusions.com/wp-content/uploads/2013/10/Press-Kit.pdf
+  \myurl{http://technicalillusions.com/}
+
+  \bibitem{bib:beacon}
+  Estimote Beacon
+  \myurl{http://developer.estimote.com/}
+  
+
+  \bibitem{bib:galileo}
+  Galileo
+  \myurl{http://www.esa.int/Our_Activities/Navigation/The_future_-_Galileo/What_is_Galileo}
+
   \bibitem{bib:gps}
   Global Positioning System
   \myurl{http://www.gps.gov/}
@@ -105,30 +116,31 @@ STM32F429/439 advanced ARM®-based 32-bit MCUs}
   GLONASS
   \myurl{https://www.glonass-iac.ru/en/}
 
-  \bibitem{bib:galileo}
-  Galileo
-  \myurl{http://www.esa.int/Our_Activities/Navigation/The_future_-_Galileo/What_is_Galileo}
 
-  
-  \bibitem{bib:beacon}
-  Estimote Beacon
-  \myurl{http://developer.estimote.com/}
-  
-  \bibitem{bib:lokWiFi} Sapiezynski P., Stopczynski A., Gatej R., Lehmann S.,
-  \textit{Tracking Human Mobility using WiFi signals} 
-  \myurl{http://arxiv.org/pdf/1505.06311v1}
-  
-  \bibitem{bib:metro} Hua J., Shen Z., Zhong S., 
-  \textit{We Can Track You If You Take the Metro: Tracking Metro Riders Using Accelerometers on Smartphones}
-  \myurl{http://arxiv.org/pdf/1505.05958v1.pdf}
-  
-  \bibitem{bib:PIRsens} Narayana S., Prasad R. V., Rao V. S., Prabhakar  T. V., Kowshik S. S., Iyer M. S.,
-  \textit{PIR Sensors: Characterization and Novel Localization Technique}
-  \myurl{http://www.es.ewi.tudelft.nl/papers/2015-VP-PIR.pdf}
-  
-  \bibitem{bib:chomiki} Markham A., Trigoni N., Ellwood S. A., Macdonald D. W.,
-  \textit{Revealing the hidden lives of underground animals using magneto-inductive tracking}
-  \myurl{https://www.cs.ox.ac.uk/files/3202/sensys2010b.pdf}
+  \bibitem{bib:katyEulera}
+  Kąty Eulera
+  \myurl{https://pl.wikipedia.org/wiki/K\%C4\%85ty_Eulera}
+
+  \bibitem{bib:OculusRiftDK2}
+  Oculus Rift Development Kit 2
+  \myurl{https://vrwiki.wikispaces.com/Oculus+Rift+Development+Kit+2}
+
+  \bibitem{bib:powerGlove}
+  Power Glove
+  \myurl{https://en.wikipedia.org/wiki/Power_Glove}
+
+  \bibitem{bib:powerGlove2}
+  \textit{Reach Out And Touch Your Data}, IBM, BYTE, lipiec 1990
+  \myurl{http://research.microsoft.com/en-us/um/people/bibuxton/buxtoncollection/a/pdf/BYTE\%20Glove\%20Comparision.pdf}
+    
+  \bibitem{bib:40ST12}
+  \textit{ULTRASONIC SENSOR (GENERAL), 40ST-12}
+  \myurl{https://www.maritex.com.pl/media/uploads/PRODUKTY_PDF/sens/40str-12.pdf}
+
+  \bibitem{bib:pi3dscan}
+  The Pi 3D scanner project
+  \myurl{http://www.pi3dscan.com/}
+
 
   
 \end{thebibliography}
