--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -108,7 +108,19 @@ TODO: dodać
 \newcommand{\OWW}[2]{\ensuremath{ \Sp{O}( \Sp{W}_{#1}  +  \Sp{W}_{#2}) }}
 
 %\newcommand{\myurl}[1]{\textit{#1}}
+
+\DeclareUrlCommand\Code{\urlstyle{rm}}
+\expandafter\def\expandafter\UrlBreaks\expandafter{\UrlBreaks  
+\do\/\do\a\do\b\do\c\do\d\do\e\do\f\do\g\do\h\do\i\do\j\do\k
+\do\l\do\m\do\n\do\o\do\p\do\q\do\r\do\s\do\t\do\u\do\v
+\do\w\do\x\do\y\do\z
+\do\A\do\B\do\C\do\D\do\E\do\F\do\G\do\H\do\I\do\J\do\K
+\do\L\do\M\do\N\do\O\do\P\do\Q\do\R\do\S\do\T\do\U\do\V
+\do\W\do\X\do\Y\do\Z}
+
+
 \newcommand{\myurl}[1]{\\ \url{#1}}
+\newcommand{\myurlL}[1]{\\ \href{#1}{\Code{#1}}}
 
 \newcommand{\rysunek}[3] {
 \begin{figure}[h]
