--- a/mgr/praca/main.tex
+++ b/mgr/praca/main.tex
@@ -27,9 +27,11 @@
 \tytulang{Determining position and orientation in space using ultrasound}
 
 \kierunek{Informatyka}
-\opiekun{dra inż. Marcina Peczarskiego}
+\opiekun{dra inż. Marcina Peczarskiego\\
+Instytut Informatyki\\
+}
 
-\date{Wrzesień 2015}
+\date{Październik 2015}
 
 %Podać dziedzinę wg klasyfikacji Socrates-Erasmus:
 \dziedzina{ 
@@ -47,16 +49,14 @@
 %  D.127. Blabalgorithms\\
 %  D.127.6. Numerical blabalysis}
 \klasyfikacja{
-TODO: dodać
-%I.4.8 Scene Analysis, Subject: Tracking
-%B.0 [Hardware]: General
-%B.4 [Hardware]: Input/Output & Data Communication 
-%H.4.m [Information Systems Applications]: Mis-
-%cellaneous
+  $\bullet$ Information systems\\
+  \hspace*{4mm}$\bullet$ Information systems applications\\
+  \hspace*{8mm}$\bullet$ Spatial-temporal systems\\
+  \hspace*{12mm}$\bullet$ Global positioning systems
 }
 
 % S?owa kluczowe:
-\keywords{położenie, lokalizacja, orientacja, 3D, ultradźwięki}
+\keywords{lokalizacja, położenie, orientacja, ultradźwięki, 3D}
 
 \renewcommand{\algorithmicrequire}{\textbf{Input:}}
 \renewcommand{\algorithmicensure}{\textbf{Output:}}
