--- a/mgr/praca/biblio.tex
+++ b/mgr/praca/biblio.tex
@@ -15,8 +15,8 @@
   BATTELLE COLUMBUS LABS DURHAM NC, sierpień 1979
   \myurl{http://www.dtic.mil/cgi-bin/GetTRDoc?Location=U2&doc=GetTRDoc.pdf&AD=ADA076060}
 
-  \bibitem{bib:OculusRift} Desai P.R., Desai P.N., Ajmera K.D., Mehta K.,
-  \textit{A Review Paper on Oculus Rift-A Virtual Reality Headset}
+  \bibitem{bib:OculusRift} Desai P.R., Desai P.N.,AV Ajmera K.D., Mehta K.,
+  \textit{A Review Paper on Oculus Rift -- A~Virtual Reality Headset}
   \myurl{http://arxiv.org/pdf/1408.1173.pdf}
 
     \bibitem{bib:metro} Hua J., Shen Z., Zhong S., 
