--- a/mgr/praca/teoria.tex
+++ b/mgr/praca/teoria.tex
@@ -23,9 +23,9 @@ co dla przestrzeni euklidesowej daje:
 Zauważmy, że znając odległość $\boldsymbol{x}$ od jednego z punktów stałych, wiemy, że $\boldsymbol{x}$ będzie leżał na
 sferze o promieniu równym danej odległości. Znając dwie odległości, możemy ograniczyć poszukiwania do części wspólnej dwóch sfer,
 czyli zazwyczaj okręgu. Dla znanych trzech odległości dostajemy część wspólną okręgu ze sferą, czyli na ogół dwa możliwe punkty.
-Mimo iż trzy odległości nie wystarczą do wyznacz $\boldsymbol{x}$, 
+Mimo iż trzy odległości nie wystarczą do wyznaczenia $\boldsymbol{x}$, 
 to otrzymane rozwiązania są na ogół od siebie odległe i 
-możemy założyć, że jedno z rozwiązań to szukany przez nas punktem.
+możemy założyć, że jedno z rozwiązań jest szukanym przez nas punktem.
 
 Ponieważ mamy pełną dowolność w doborze punktów stałych $\boldsymbol{y_i}$, dla uproszczenia możemy przyjąć:
 $\boldsymbol{y_1}=(\frac{a}{2},0,0), \boldsymbol{y_2}=(-\frac{a}{2},0,0), \boldsymbol{y_3}=(0,h,0)$. 
@@ -33,14 +33,14 @@ Zatem $\boldsymbol{y_1}, \boldsymbol{y_2}, \boldsymbol{y_3}$ są wierzchołkami
 trójkąta równoramiennego o wysokości $h$ i podstawie $a$, natomiast układ równań upraszcza
 się do postaci:
  \begin{align}
-    \nonumber  (\frac{a}{2}-x_1)^2 + x_2^2 + x_3^2 &= r_1^2,
- \\ \nonumber  (\frac{a}{2}+x_1)^2 + x_2^2 + x_3^2 &= r_2^2,
+    \nonumber  (\tfrac{a}{2}-x_1)^2 + x_2^2 + x_3^2 &= r_1^2,
+ \\ \nonumber  (\tfrac{a}{2}+x_1)^2 + x_2^2 + x_3^2 &= r_2^2,
  \\ \nonumber  x_1^2 + (h-x_2)^2 + x_3^2 &= r_3^2,
  \end{align}
 z czego ostatecznie otrzymujemy:
  \begin{align}
     \nonumber  x_1 &= \frac{r_2^2 - r_1^2}{2a},
- \\ \nonumber  x_2 &= \frac{r_2^2 - r_3^2 + x_1^2 - (\frac{a}{2}+x_1)^2}{2h}  + \frac{h}{2},
+ \\ \nonumber  x_2 &= \frac{r_2^2 - r_3^2  - a x_1 - \frac{a^2}{4} }{2h}  + \frac{h}{2},
  \\ \nonumber  x_3 &= \pm \sqrt{r_3^2-x_1^2-(h-x_2)^2}.
  \end{align}
 
@@ -51,8 +51,7 @@ Oprócz położenia nadajnika w przestrzeni interesuje nas również jego orient
 Standardowo definiuje się ją jako kąty Eulera \cite{bib:katyEulera}: przechylenia, 
 pochylenia oraz odchylenia wokół osi związanych z obiektem, jednak na potrzeby niniejszej pracy wygodniej 
 posługiwać się dwoma prostopadłymi wektorami, które jednoznacznie wyznaczają owe kąty. 
-Prezentowany prototyp określa położenie czterech punktów $\boldsymbol{x_1, x_2, x_3, x_4}$ na nadajniku tworzących prostokąt 
-, a następnie na ich podstawie wyznacza poszukiwane dwa prostopadłe wektory, które jednoznacznie
+Prezentowany prototyp określa położenie czterech punktów $\boldsymbol{x_1, x_2, x_3, x_4}$ na nadajniku tworzących prostokąt, a~następnie na ich podstawie wyznacza poszukiwane dwa prostopadłe wektory, które jednoznacznie
 definiują orientację nadajnika (rysunek \ref{fig:orientacja}).
  \begin{figure}[H]
     \centering
@@ -67,7 +66,7 @@ orientację przestrzenną nadajnika.
 
 Zauważmy, że wyznaczenie położenia czterech punktów w przestrzeni daje nam pewną nadmiarowość
 danych. Do wyznaczenia pozycji nadajnika potrzebujemy jedynie trzech współrzędnych,
-a dla orientacji -- zaledwie trzech kątów, czyli w sumie sześciu niewiadomych.
+a dla orientacji -- zaledwie trzech kątów, czyli w sumie sześciu wartości.
 Prezentowany prototyp wyznacza  dwanaście niewiadomych, co daje dwukrotną nadmiarowość danych.
 Jest to efekt pożądany, gdyż pozwala na korektę błędów pomiarowych.
 
@@ -86,9 +85,8 @@ Prędkość dźwięku w powietrzu w dużym stopniu zależy od panujących warunk
 zwłaszcza temperatury.
 Dla gazu doskonałego prędkość ta wyraża się wzorem:
 \[
-V = \num{331,3}  \sqrt{1+\frac{T}{\num{273,15}}} \quad \left[ \SI{}{\frac{m}{s}} \right]
+V = \num{331,3}  \sqrt{1+\frac{T}{\num{273,15}}} \quad \left[ \SI{}{\frac{m}{s}} \right],
 \]
-
 gdzie $T$ jest temperaturą w stopniach Celsjusza (\SI{}{\degC}).
 Wzór ten możemy przybliżyć za pomocą rozwinięcia Taylora dla temperatur bliskich temperaturze pokojowej \ang{25}\SI{}{C}:
 \[
