--- a/mgr/praca/nadajnik.tex
+++ b/mgr/praca/nadajnik.tex
@@ -23,7 +23,7 @@ Schemat połączeń przedstawia rysunek \ref{fig:nadajnik_schemat}.
     \label{fig:nadajnik_schemat}
 \end{figure}
 
-Całość umieszczono na ramie w kształcie litery H wykonanej z rurek PCV.
+Całość umieszczono na ramie w kształcie litery H wykonanej z rurek PCV (rysunek \ref{fig:nadajnik_szkic}).
 Rezonatory dodatkowo odizolowano  od ramy przy użyciu rzepów, co ułatwia ich demontaż, a także skutecznie
 zapobiega przenoszeniu się drgań. 
 
@@ -44,12 +44,12 @@ części: wzbudzającej i tłumiącej.
 Okres impulsów sygnału jest zgodny z częstotliwością rezonansową przetworników, a dodatkowo część tłumiąca
 jest przesunięta względem części wyzwalającej o 180 stopni.
 Czas trwania części wzbudzającej jest najkrótszy z możliwych i trwa jeden okres, natomiast czas trwania części tłumiącej określono
-tak, by odebrany sygnał zawierał w sobie mierzalne przesunięcie fazowe. 
+tak, by odebrany sygnał zawierał również sinusoidy przesunięte fazowo względem początkowej części sygnału.
 Rysunek \ref{fig:output_signal} przedstawia sygnał podawany na przetwornik piezoelektryczny.
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=1.0\textwidth, trim= 27mm 0mm 0mm 0mm,clip]{output_signal}
+    \includegraphics[width=1.0\textwidth, trim= 25mm 0mm 0mm 0mm,clip]{output_signal}
     \caption{Sygnał podawany na przetwornik piezoelektryczny}
     \label{fig:output_signal}
 \end{figure}
@@ -61,11 +61,11 @@ Mimo że producent wykorzystanych rezonatorów zapewnia ich pracę w zakresie \S
 to taki rozrzut okazał się zbyt duży, 
 dlatego z 30 rezonatorów (15 nadajników i 15 odbiorników) wybrane zostały 4 nadajniki i 3 odbiorniki o najbardziej 
 zbliżonych częstotliwościach rezonansowych.
-
 Tabela \ref{table:czestotliwosci} zawiera wyniki pomiarów częstotliwości. Gwiazdką oznaczono wykorzystane przetworniki piezoelektryczne.
 
 \begin{table}[h]
   \caption{Częstotliwości rezonansowe przetworników piezoelektrycznych}
+  \smallskip
   \label{table:czestotliwosci}
   \centering
   \begin{tabular}{|r|r|r|}
